# travel_advisor

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: piggy-weekend-mvp-spec.md  requirements-investigation.md  travel-advisor-deep-research-gemini.md  travel-advisor-deep-research-openai.md  travel-fare-advisor-plan.md
src/travel_advisor/: __init__.py  api.py  calendar_engine.py  cli.py  models.py  pair_builder.py  profiles.py  scoring.py  service.py
src/travel_advisor/connectors/: __init__.py  amadeus.py  base.py  factory.py  sample.py
tests/: test_amadeus_connector.py  test_api.py  test_calendar_engine.py  test_connector_factory.py  test_ranking.py  test_scoring.py  test_service.py
